dont knwo why my navbar is not showing up. also few bugs still exist. running out of time--gonna push it

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,30 @@
  *= require_tree .
  *= require_self
  */
- 
+ @import 'bootstrap-sprockets';
+@import 'bootstrap';
+
+body {
+	font-family: "Open Sans", Helvetica, Arial, sans-serif
+}
+
+.flash {
+	
+	position: fixed;
+	z-index: 9999;
+	background: rgba(256, 0, 0, 0.5);
+	top: 0;
+	left: 50%;
+	transform: translate(-50%);
+}
+
+
+
+	.picture {
+		display: block;
+		max-width: 250px;
+		max-height: 250px;
+		border-radius: 50%;
+		margin: 0 auto;
+	}
+
